Correct width issue with scrollbar appearing

--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@
 
 body {
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
   color: var(--black);
   background-color: var(--white);
   font-size: 16px;
